Create an Interactive Button Component

--- a/BlazorCrudDotNet8/Components/Pages/GameList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/GameList.razor
@@ -1,8 +1,6 @@
 @page "/games"
 @inject IGameService GameService
-@inject NavigationManager NavigationManager
 @attribute [StreamRendering]
-@rendermode InteractiveServer
 
 <h3>GameList</h3>
 
@@ -23,7 +21,7 @@ else
         }
     </ul>
 }
-<button @onclick="CreateGame" class="btn btn-primary">Create Game</button>
+<CreateGameButton />
 
 @code {
     List<Game>? games = null;
@@ -31,10 +29,5 @@ else
     protected override async Task OnInitializedAsync()
     {
         games = await GameService.GetAllGames();
-    }
-
-    void CreateGame()
-    {
-        NavigationManager.NavigateTo("/edit-game");
     }
 }
