Use WebAssembly to Create a Game

--- a/BlazorCrudDotNet8/Components/_Imports.razor
+++ b/BlazorCrudDotNet8/Components/_Imports.razor
@@ -8,8 +8,8 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorCrudDotNet8
+@using BlazorCrudDotNet8.BusinessLogic.Entities
+@using BlazorCrudDotNet8.BusinessLogic.Services
 @using BlazorCrudDotNet8.Client
 @using BlazorCrudDotNet8.Components
 @using BlazorCrudDotNet8.Components.Shared
-@using BlazorCrudDotNet8.Entities
-@using BlazorCrudDotNet8.Services
