--- a/BlazorCrudDotNet8.Client/_Imports.razor
+++ b/BlazorCrudDotNet8.Client/_Imports.razor
@@ -7,4 +7,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using BlazorCrudDotNet8.BusinessLogic.Entities
+@using BlazorCrudDotNet8.BusinessLogic.Services
 @using BlazorCrudDotNet8.Client
