--- a/BlazorCrudDotNet8.Client/Pages/EditGame.razor
+++ b/BlazorCrudDotNet8.Client/Pages/EditGame.razor
@@ -1,7 +1,7 @@
 @page "/edit-game"
 @page "/edit-game/{id:int}"
 @inject IGameService GameService
-@rendermode InteractiveWebAssembly 
+@rendermode InteractiveAuto
 
 <h3>Create Game</h3>
 
