Implement Updating & Deleting a Game

--- a/BlazorCrudDotNet8.Client/Pages/EditGame.razor
+++ b/BlazorCrudDotNet8.Client/Pages/EditGame.razor
@@ -3,12 +3,22 @@
 @inject IGameService GameService
 @rendermode InteractiveAuto
 
-<h3>Create Game</h3>
+@if (Id == null) {
+    <h3>Create Game</h3>
+}
+else
+{
+    <h3>Edit @game.Name</h3>
+}
 
 <EditForm Model="game" OnSubmit="HandleSubmit" FormName="editGame">
     <label>Name</label>
     <InputText @bind-Value="game.Name">@game.Name</InputText>
     <button type="submit" class="btn btn-primary">Submit</button>
+    @if (Id != null)
+    {
+        <button @onclick="DeleteGame" type="button" class="btn btn-danger">Delete</button>
+    }
 </EditForm>
 
 @code {
@@ -17,8 +27,25 @@
     [SupplyParameterFromForm]
     Game game { get; set; } = new Game { Name = string.Empty };
 
+    protected override async Task OnParametersSetAsync()
+    {
+        game = await GameService.GetGameById((int)Id);
+    }
+
     async Task HandleSubmit()
     {
-        await GameService.AddGame(game);
+        if (Id == null)
+        {
+            await GameService.AddGame(game);
+        }
+        else
+        {
+            await GameService.EditGame((int)Id, game);
+        }
+    }
+
+    async Task DeleteGame()
+    {
+        await GameService.DeleteGame((int)Id);
     }
 }
