--- a/BlazorCrudDotNet8/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/BlazorCrudDotNet8/Components/Account/Pages/Manage/ChangePassword.razor
@@ -2,7 +2,7 @@
 
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
-@using BlazorCrudDotNet8.Data
+@using BlazorCrudDotNet8.Shared.Entities
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
