--- a/BlazorCrudDotNet8/Components/Account/Pages/Register.razor
+++ b/BlazorCrudDotNet8/Components/Account/Pages/Register.razor
@@ -5,7 +5,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using BlazorCrudDotNet8.Data
+@using BlazorCrudDotNet8.Shared.Entities
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IUserStore<ApplicationUser> UserStore
