--- a/BlazorCrudDotNet8/Components/Account/Pages/ResetPassword.razor
+++ b/BlazorCrudDotNet8/Components/Account/Pages/ResetPassword.razor
@@ -4,7 +4,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using BlazorCrudDotNet8.Data
+@using BlazorCrudDotNet8.Shared.Entities
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<ApplicationUser> UserManager
