--- a/BlazorCrudDotNet8/Components/_Imports.razor
+++ b/BlazorCrudDotNet8/Components/_Imports.razor
@@ -10,3 +10,5 @@
 @using BlazorCrudDotNet8
 @using BlazorCrudDotNet8.Client
 @using BlazorCrudDotNet8.Components
+@using BlazorCrudDotNet8.Shared.Entities
+@using BlazorCrudDotNet8.Shared.Services
