cp ../intrepion-bash/dotnet/files/AppNamePlaceholder/Components/_Imports.razor BlazorCrudDotNet8/Components/_Imports.razor

--- a/BlazorCrudDotNet8/Components/_Imports.razor
+++ b/BlazorCrudDotNet8/Components/_Imports.razor
@@ -7,6 +7,8 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using BlazorCrudDotNet8
-@using BlazorCrudDotNet8.Client
-@using BlazorCrudDotNet8.Components
+@using AppNamePlaceholder
+@using AppNamePlaceholder.Client
+@using AppNamePlaceholder.Components
+@using AppNamePlaceholder.Shared.Entities
+@using AppNamePlaceholder.Shared.Services
