--- a/BlazorCrudDotNet8/Components/Pages/GameList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/GameList.razor
@@ -1,6 +1,8 @@
 @page "/games"
 @inject IGameService GameService
+@inject NavigationManager NavigationManager
 @attribute [StreamRendering]
+@rendermode @(new InteractiveServerRenderMode(false))
 
 <h3>Game List</h3>
 
@@ -21,6 +23,7 @@ else
         }
     </ul>
 }
+<button @onclick="CreateGame" class="btn btn-primary">Create Game</button>
 
 @code {
     List<Game>? games = null;
@@ -28,5 +31,10 @@ else
     protected override async Task OnInitializedAsync()
     {
         games = await GameService.GetAllAsync();
+    }
+
+    void CreateGame()
+    {
+        NavigationManager.NavigateTo("/games-edit");
     }
 }
