--- a/BlazorCrudDotNet8/Components/Pages/GameEdit.razor
+++ b/BlazorCrudDotNet8/Components/Pages/GameEdit.razor
@@ -1,9 +1,10 @@
 @page "/games-edit"
 @page "/games-edit/{id}"
+@inject IGameService GameService
 
 <h3>Create Game</h3>
 
-<EditForm Model="game" OnSubmit="HandleSubmit">
+<EditForm Model="game" OnSubmit="HandleSubmit" FormName="editGame">
     <label>Name</label>
     <InputText @bind-Value="game.Name">@game.Name</InputText>
     <button type="submit" class="btn btn-primary">Submit</button>
@@ -12,10 +13,11 @@
 @code {
     [Parameter]
     public Guid? Id { get; set; }
-    Game game = new Game { Name = string.Empty };
+    [SupplyParameterFromForm]
+    Game game { get; set; } = new Game { Name = string.Empty };
 
     async Task HandleSubmit()
     {
-
+        await GameService.AddAsync(game);
     }
 }
