--- a/BlazorCrudDotNet8.Client/Pages/GameEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/GameEdit.razor
@@ -1,7 +1,7 @@
 @page "/games-edit"
 @page "/games-edit/{id}"
 @inject IGameService GameService
-@rendermode InteractiveWebAssembly
+@rendermode InteractiveAuto
 
 <h3>Create Game</h3>
 
