--- a/BlazorCrudDotNet8.Client/Pages/GameEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/GameEdit.razor
@@ -1,14 +1,25 @@
 @page "/games-edit"
-@page "/games-edit/{id}"
+@page "/games-edit/{id:guid}"
 @inject IGameService GameService
 @rendermode InteractiveAuto
 
-<h3>Create Game</h3>
+@if (Id == null)
+{
+    <h3>Create Game</h3>
+}
+else
+{
+    <h3>Edit @game.Name</h3>
+}
 
 <EditForm Model="game" OnSubmit="HandleSubmit">
     <label>Name</label>
     <InputText @bind-Value="game.Name">@game.Name</InputText>
     <button type="submit" class="btn btn-primary">Submit</button>
+    @if (Id != null)
+    {
+        <button @onclick="Delete" type="button" class="btn btn-danger">Delete</button>
+    }
 </EditForm>
 
 @code {
@@ -16,8 +27,30 @@
     public Guid? Id { get; set; }
     Game game { get; set; } = new Game { Name = string.Empty };
 
+    protected override async Task OnParametersSetAsync()
+    {
+        if (Id == null)
+        {
+            return;
+        }
+
+        game = await GameService.GetByIdAsync((Guid)Id);
+    }
+
     async Task HandleSubmit()
     {
-        await GameService.AddAsync(game);
+        if (Id == null)
+        {
+            await GameService.AddAsync(game);
+        }
+        else
+        {
+            await GameService.EditAsync((Guid)Id, game);
+        }
+    }
+
+    async Task Delete()
+    {
+        await GameService.DeleteAsync((Guid)Id);
     }
 }
