--- a/BlazorCrudDotNet8/Components/Pages/GameList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/GameList.razor
@@ -18,7 +18,7 @@ else
     <ul>
         @foreach (var game in games)
         {
-            <li>@game.Name</li>
+            <li>@game.Name <EditButton Id="game.Id" Url="/games-edit" /></li>
         }
     </ul>
 }
