Add Interactivity for a Button  - Create/POST Preparations

--- a/BlazorCrudDotNet8/Components/Pages/GameGuidsList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/GameGuidsList.razor
@@ -1,6 +1,8 @@
 @page "/game-guids"
 @inject IGameGuidService GameGuidService
+@inject NavigationManager NavigationManager
 @attribute [StreamRendering]
+@rendermode @(new InteractiveServerRenderMode(false))
 
 <h3>Game Guids List</h3>
 
@@ -21,6 +23,7 @@ else
         }
     </ul>
 }
+<button @onclick="Create" class="btn btn-primary">Create</button>
 
 @code {
     List<GameGuid>? gameGuids = null;
@@ -28,5 +31,10 @@ else
     protected override async Task OnInitializedAsync()
     {
         gameGuids = await GameGuidService.GetAllAsync();
+    }
+
+    void Create()
+    {
+        NavigationManager.NavigateTo("/game-guids-edit");
     }
 }
