--- a/BlazorCrudDotNet8/Components/Pages/GameStringsList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/GameStringsList.razor
@@ -1,6 +1,8 @@
 @page "/game-strings"
 @inject IGameStringService GameStringService
+@inject NavigationManager NavigationManager
 @attribute [StreamRendering]
+@rendermode @(new InteractiveServerRenderMode(false))
 
 <h3>Game Strings List</h3>
 
@@ -21,6 +23,7 @@ else
         }
     </ul>
 }
+<button @onclick="Create" class="btn btn-primary">Create</button>
 
 @code {
     List<GameString>? gameStrings = null;
@@ -28,5 +31,10 @@ else
     protected override async Task OnInitializedAsync()
     {
         gameStrings = await GameStringService.GetAllAsync();
+    }
+
+    void Create()
+    {
+        NavigationManager.NavigateTo("/game-guids-edit");
     }
 }
