--- a/BlazorCrudDotNet8/Components/_Imports.razor
+++ b/BlazorCrudDotNet8/Components/_Imports.razor
@@ -10,5 +10,6 @@
 @using BlazorCrudDotNet8
 @using BlazorCrudDotNet8.Client
 @using BlazorCrudDotNet8.Components
+@using BlazorCrudDotNet8.Components.Common
 @using BlazorCrudDotNet8.Entities
 @using BlazorCrudDotNet8.Services.Interfaces
