--- a/BlazorCrudDotNet8/Components/Pages/GameStringsEdit.razor
+++ b/BlazorCrudDotNet8/Components/Pages/GameStringsEdit.razor
@@ -1,9 +1,10 @@
 @page "/game-strings-edit"
 @page "/game-strings-edit/{id}"
+@inject IGameStringService GameStringService
 
 <h3>Create Game Strings</h3>
 
-<EditForm Model="gameString" OnSubmit="HandleSubmit">
+<EditForm Model="gameString" OnSubmit="HandleSubmit" FormName="editGameString">
     <label>Name</label>
     <InputText @bind-Value="gameString.Name">@gameString.Name</InputText>
     <button type="submit" class="btn btn-primary">Submit</button>
@@ -12,10 +13,11 @@
 @code {
     [Parameter]
     public string? Id { get; set; }
-    GameString gameString = new GameString { Name = string.Empty };
+    [SupplyParameterFromForm]
+    GameString gameString { get; set; } = new GameString { Name = string.Empty };
 
     async Task HandleSubmit()
     {
-        //
+        await GameStringService.AddAsync(gameString);
     }
 }
