Use WebAssembly to Create a Game

--- a/BlazorCrudDotNet8/Components/Account/Pages/Manage/ResetAuthenticator.razor
+++ b/BlazorCrudDotNet8/Components/Account/Pages/Manage/ResetAuthenticator.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Account/Manage/ResetAuthenticator"
 
 @using Microsoft.AspNetCore.Identity
-@using BlazorCrudDotNet8.Data
+@using BlazorCrudDotNet8.Shared.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
