--- a/BlazorCrudDotNet8/Components/Account/Shared/ManageNavMenu.razor
+++ b/BlazorCrudDotNet8/Components/Account/Shared/ManageNavMenu.razor
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using BlazorCrudDotNet8.Data
+@using BlazorCrudDotNet8.Shared.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 
