--- a/BlazorCrudDotNet8.Client/_Imports.razor
+++ b/BlazorCrudDotNet8.Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorCrudDotNet8.Client
+@using BlazorCrudDotNet8.Shared.Entities
+@using BlazorCrudDotNet8.Shared.Services.Interfaces
