--- a/BlazorCrudDotNet8/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/BlazorCrudDotNet8/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -5,7 +5,7 @@
 @using System.Text
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
-@using BlazorCrudDotNet8.Data
+@using BlazorCrudDotNet8.Shared.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
