--- a/BlazorCrudDotNet8/Components/_Imports.razor
+++ b/BlazorCrudDotNet8/Components/_Imports.razor
@@ -11,5 +11,5 @@
 @using BlazorCrudDotNet8.Client
 @using BlazorCrudDotNet8.Components
 @using BlazorCrudDotNet8.Components.Common
-@using BlazorCrudDotNet8.Entities
-@using BlazorCrudDotNet8.Services.Interfaces
+@using BlazorCrudDotNet8.Shared.Entities
+@using BlazorCrudDotNet8.Shared.Services.Interfaces
