Quick Look at RenderModeInteractiveAuto

--- a/BlazorCrudDotNet8.Client/Pages/GameGuidsEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/GameGuidsEdit.razor
@@ -1,7 +1,7 @@
 @page "/game-guids-edit"
 @page "/game-guids-edit/{id:guid}"
 @inject IGameGuidService GameGuidService
-@rendermode InteractiveWebAssembly
+@rendermode InteractiveAuto
 
 <h3>Create Game Guids</h3>
 
