--- a/BlazorCrudDotNet8.Client/Pages/GameIntsEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/GameIntsEdit.razor
@@ -1,7 +1,7 @@
 @page "/game-ints-edit"
 @page "/game-ints-edit/{id:int}"
 @inject IGameIntService GameIntService
-@rendermode InteractiveWebAssembly
+@rendermode InteractiveAuto
 
 <h3>Create Game Ints</h3>
 
