--- a/BlazorCrudDotNet8.Client/Pages/GameStringsEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/GameStringsEdit.razor
@@ -1,7 +1,7 @@
 @page "/game-strings-edit"
 @page "/game-strings-edit/{id}"
 @inject IGameStringService GameStringService
-@rendermode InteractiveWebAssembly
+@rendermode InteractiveAuto
 
 <h3>Create Game Strings</h3>
 
