--- a/BlazorCrudDotNet8/Components/Common/NavButton.razor
+++ b/BlazorCrudDotNet8/Components/Common/NavButton.razor
@@ -1,13 +1,15 @@
 @inject NavigationManager NavigationManager
 @rendermode InteractiveServer
 
-<button @onclick="Create" class="btn btn-primary">Create</button>
+<button @onclick="Click" class="btn btn-primary">@Name</button>
 
 @code {
     [Parameter]
     public required string Href { get; set; }
+    [Parameter]
+    public required string Name { get; set; }
 
-    void Create()
+    void Click()
     {
         NavigationManager.NavigateTo(Href);
     }
