--- a/BlazorCrudDotNet8.Client/Pages/GameGuidsEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/GameGuidsEdit.razor
@@ -3,12 +3,23 @@
 @inject IGameGuidService GameGuidService
 @rendermode InteractiveAuto
 
-<h3>Create Game Guids</h3>
+@if (Id == null)
+{
+    <h3>Create Game Guids</h3>
+}
+else
+{
+    <h3>Edit @gameGuid.Name</h3>
+}
 
 <EditForm Model="gameGuid" OnSubmit="HandleSubmit">
     <label>Name</label>
     <InputText @bind-Value="gameGuid.Name">@gameGuid.Name</InputText>
     <button type="submit" class="btn btn-primary">Submit</button>
+    @if (Id != null)
+    {
+        <button @onclick="Delete" type="button" class="btn btn-danger">Delete</button>
+    }
 </EditForm>
 
 @code {
@@ -16,8 +27,25 @@
     public Guid? Id { get; set; }
     GameGuid gameGuid { get; set; } = new GameGuid { Name = string.Empty };
 
+    protected override async Task OnParametersSetAsync()
+    {
+        gameGuid = await GameGuidService.GetByIdAsync((Guid)Id);
+    }
+
     async Task HandleSubmit()
     {
-        await GameGuidService.AddAsync(gameGuid);
+        if (Id == null)
+        {
+            await GameGuidService.AddAsync(gameGuid);
+        }
+        else
+        {
+            await GameGuidService.EditAsync((Guid)Id, gameGuid);
+        }
+    }
+
+    async Task Delete()
+    {
+        await GameGuidService.DeleteAsync((Guid)Id);
     }
 }
