--- a/BlazorCrudDotNet8.Client/Pages/GameStringsEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/GameStringsEdit.razor
@@ -3,12 +3,23 @@
 @inject IGameStringService GameStringService
 @rendermode InteractiveAuto
 
-<h3>Create Game Strings</h3>
+@if (Id == null)
+{
+    <h3>Create Game Strings</h3>
+}
+else
+{
+    <h3>Edit @gameString.Name</h3>
+}
 
 <EditForm Model="gameString" OnSubmit="HandleSubmit">
     <label>Name</label>
     <InputText @bind-Value="gameString.Name">@gameString.Name</InputText>
     <button type="submit" class="btn btn-primary">Submit</button>
+    @if (Id != null)
+    {
+        <button @onclick="Delete" type="button" class="btn btn-danger">Delete</button>
+    }
 </EditForm>
 
 @code {
@@ -16,8 +27,25 @@
     public string? Id { get; set; }
     GameString gameString { get; set; } = new GameString { Name = string.Empty };
 
+    protected override async Task OnParametersSetAsync()
+    {
+        gameString = await GameStringService.GetByIdAsync((string)Id);
+    }
+
     async Task HandleSubmit()
     {
-        await GameStringService.AddAsync(gameString);
+        if (Id == null)
+        {
+            await GameStringService.AddAsync(gameString);
+        }
+        else
+        {
+            await GameStringService.EditAsync((string)Id, gameString);
+        }
+    }
+
+    async Task Delete()
+    {
+        await GameStringService.DeleteAsync((string)Id);
     }
 }
