--- a/BlazorCrudDotNet8/Components/Pages/GameIntsList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/GameIntsList.razor
@@ -17,11 +17,17 @@ else
     <ul>
         @foreach (var gameInt in gameInts)
         {
-            <li>@gameInt.Name</li>
+            <li>
+                @gameInt.Name
+                @if (gameInt.Id != null)
+                {
+                    <NavButton Href="@("/game-ints-edit/" + ((int)gameInt.Id).ToString())" Name="Edit" />
+                }
+            </li>
         }
     </ul>
 }
-<CreateButton Href="/game-ints-edit" />
+<NavButton Href="/game-ints-edit" Name="Create" />
 
 @code {
     List<GameInt>? gameInts = null;
