--- a/BlazorCrudDotNet8/Components/Layout/NavMenu.razor
+++ b/BlazorCrudDotNet8/Components/Layout/NavMenu.razor
@@ -63,6 +63,18 @@
             </NavLink>
         </div>
 
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="application-roles">
+                <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Application Roles
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="application-users">
+                <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Application Users
+            </NavLink>
+        </div>
+
         <AuthorizeView>
             <Authorized>
                 <div class="nav-item px-3">
