gawk -i inplace "{ gsub(/AppNamePlaceholder/, \"BlazorCrudDotNet8\") }; { print }" BlazorCrudDotNet8/Components/*

--- a/BlazorCrudDotNet8/Components/_Imports.razor
+++ b/BlazorCrudDotNet8/Components/_Imports.razor
@@ -7,9 +7,9 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using AppNamePlaceholder
-@using AppNamePlaceholder.Client
-@using AppNamePlaceholder.Components
-@using AppNamePlaceholder.Components.Common
-@using AppNamePlaceholder.Shared.Entities
-@using AppNamePlaceholder.Shared.Services.Interfaces
+@using BlazorCrudDotNet8
+@using BlazorCrudDotNet8.Client
+@using BlazorCrudDotNet8.Components
+@using BlazorCrudDotNet8.Components.Common
+@using BlazorCrudDotNet8.Shared.Entities
+@using BlazorCrudDotNet8.Shared.Services.Interfaces
