--- a/BlazorCrudDotNet8.Client/_Imports.razor
+++ b/BlazorCrudDotNet8.Client/_Imports.razor
@@ -7,6 +7,6 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using AppNamePlaceholder.Client
-@using AppNamePlaceholder.Shared.Entities
-@using AppNamePlaceholder.Shared.Services.Interfaces
+@using BlazorCrudDotNet8.Client
+@using BlazorCrudDotNet8.Shared.Entities
+@using BlazorCrudDotNet8.Shared.Services.Interfaces
