--- a/BlazorCrudDotNet8/Components/Account/Pages/ConfirmEmail.razor
+++ b/BlazorCrudDotNet8/Components/Account/Pages/ConfirmEmail.razor
@@ -3,7 +3,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using BlazorCrudDotNet8.Data
+@using BlazorCrudDotNet8.BusinessLogic.Entities
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityRedirectManager RedirectManager
