--- a/BlazorCrudDotNet8/Components/Account/Pages/Manage/ExternalLogins.razor
+++ b/BlazorCrudDotNet8/Components/Account/Pages/Manage/ExternalLogins.razor
@@ -2,7 +2,7 @@
 
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using BlazorCrudDotNet8.Data
+@using BlazorCrudDotNet8.BusinessLogic.Entities
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
