--- a/BlazorCrudDotNet8.Client/_Imports.razor
+++ b/BlazorCrudDotNet8.Client/_Imports.razor
@@ -7,7 +7,7 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using AppNamePlaceholder.BusinessLogic.Entities
-@using AppNamePlaceholder.BusinessLogic.Services
-@using AppNamePlaceholder.Client
-@using AppNamePlaceholder.SharedComponents
+@using BlazorCrudDotNet8.BusinessLogic.Entities
+@using BlazorCrudDotNet8.BusinessLogic.Services
+@using BlazorCrudDotNet8.Client
+@using BlazorCrudDotNet8.SharedComponents
