--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -1,5 +1,5 @@
 @page "/admin/UrlNamePlaceholder-list"
-@inject IEntityNamePlaceholderAdminService EntityNamePlaceholderAdminService
+@inject IGameAdminService GameAdminService
 @attribute [StreamRendering]
 
 <section>
@@ -46,10 +46,10 @@
 </section>
 
 @code {
-    List<EntityNamePlaceholder>? TableNamePlaceholder = null;
+    List<Game>? TableNamePlaceholder = null;
 
     protected override async Task OnInitializedAsync()
     {
-        TableNamePlaceholder = await EntityNamePlaceholderAdminService.GetAllAsync();
+        TableNamePlaceholder = await GameAdminService.GetAllAsync();
     }
 }
