--- a/BlazorCrudDotNet8/Components/Layout/NavMenu.razor
+++ b/BlazorCrudDotNet8/Components/Layout/NavMenu.razor
@@ -50,6 +50,12 @@
                     </NavLink>
                 </div>
 
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="admin/game-list">
+                        <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Games
+                    </NavLink>
+                </div>
+
                 @* NavMenuLinkCodePlaceholder *@
 
                 <div class="nav-item px-3">
