gawk -i inplace "{ gsub(/EntityNamePlaceholder/, \"Game\") }; { print }" BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor

--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
@@ -1,6 +1,6 @@
 @page "/admin/UrlNamePlaceholder-edit"
 @page "/admin/UrlNamePlaceholder-edit/{id:guid}"
-@inject IEntityNamePlaceholderAdminService EntityNamePlaceholderAdminService
+@inject IGameAdminService GameAdminService
 @inject AuthenticationStateProvider GetAuthenticationStateAsync
 @inject NavigationManager NavigationManager
 @rendermode InteractiveAuto
@@ -40,7 +40,7 @@
 @code {
     [Parameter]
     public Guid Id { get; set; }
-    EntityNamePlaceholder LowercaseNamePlaceholder { get; set; } = new EntityNamePlaceholder();
+    Game LowercaseNamePlaceholder { get; set; } = new Game();
 
     protected override async Task OnParametersSetAsync()
     {
@@ -49,11 +49,11 @@
             return;
         }
 
-        var result = await EntityNamePlaceholderAdminService.GetByIdAsync(Id);
+        var result = await GameAdminService.GetByIdAsync(Id);
 
         if (result == null)
         {
-            LowercaseNamePlaceholder = new EntityNamePlaceholder();
+            LowercaseNamePlaceholder = new Game();
         }
         else
         {
@@ -83,18 +83,18 @@
 
         if (Id.Equals(Guid.Empty))
         {
-            var dbEntityNamePlaceholder = await EntityNamePlaceholderAdminService.AddAsync(userName, LowercaseNamePlaceholder);
+            var dbGame = await GameAdminService.AddAsync(userName, LowercaseNamePlaceholder);
 
-            if (dbEntityNamePlaceholder == null)
+            if (dbGame == null)
             {
                 return;
             }
 
-            NavigationManager.NavigateTo($"/admin/UrlNamePlaceholder-edit/{dbEntityNamePlaceholder.Id}");
+            NavigationManager.NavigateTo($"/admin/UrlNamePlaceholder-edit/{dbGame.Id}");
         }
         else
         {
-            await EntityNamePlaceholderAdminService.EditAsync(userName, Id, LowercaseNamePlaceholder);
+            await GameAdminService.EditAsync(userName, Id, LowercaseNamePlaceholder);
         }
     }
 
@@ -113,7 +113,7 @@
             return;
         }
 
-        await EntityNamePlaceholderAdminService.DeleteAsync(userName, Id);
+        await GameAdminService.DeleteAsync(userName, Id);
         NavigationManager.NavigateTo($"/admin/UrlNamePlaceholder-list");
     }
 }
