gawk -i inplace "{ gsub(/LowercaseNamePlaceholder/, \"game\") }; { print }" BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor

--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -28,13 +28,13 @@
                 }
                 else
                 {
-                    @foreach (var LowercaseNamePlaceholder in Games)
+                    @foreach (var game in Games)
                     {
                         <tr>
-                            <td>@LowercaseNamePlaceholder.Id</td>
-                            @* <td>@LowercaseNamePlaceholder.PropertyNamePlaceholder</td> *@
+                            <td>@game.Id</td>
+                            @* <td>@game.PropertyNamePlaceholder</td> *@
                             <td>
-                                <NavButton Href="@("/admin/game-edit/" + LowercaseNamePlaceholder.Id)" Name="Edit" />
+                                <NavButton Href="@("/admin/game-edit/" + game.Id)" Name="Edit" />
                             </td>
                         </tr>
                     }
