gawk -i inplace "{ gsub(/EntityNamePlaceholder/, \"Game\") }; { print }" BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor

--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -1,5 +1,5 @@
 @page "/admin/UrlNamePlaceholder-list"
-@inject IEntityNamePlaceholderAdminService EntityNamePlaceholderAdminService
+@inject IGameAdminService GameAdminService
 @attribute [StreamRendering]
 
 <section>
@@ -46,10 +46,10 @@
 </section>
 
 @code {
-    List<EntityNamePlaceholder>? TableLowercaseNamePlaceholder = null;
+    List<Game>? TableLowercaseNamePlaceholder = null;
 
     protected override async Task OnInitializedAsync()
     {
-        TableLowercaseNamePlaceholder = await EntityNamePlaceholderAdminService.GetAllAsync();
+        TableLowercaseNamePlaceholder = await GameAdminService.GetAllAsync();
     }
 }
