--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
@@ -9,11 +9,11 @@
 <section>
     @if (Id.Equals(Guid.Empty))
     {
-        <h1>HumanNamePlaceholder Role</h1>
+        <h1>Game Role</h1>
     }
     else
     {
-        <h1>Edit HumanNamePlaceholder</h1>
+        <h1>Edit Game</h1>
     }
     <article>
         <EditForm class="container" Model="EntityLowercaseNamePlaceholder" OnSubmit="HandleSubmit">
