--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
@@ -1,5 +1,5 @@
-@page "/admin/UrlNamePlaceholder-edit"
-@page "/admin/UrlNamePlaceholder-edit/{id:guid}"
+@page "/admin/game-edit"
+@page "/admin/game-edit/{id:guid}"
 @inject AuthenticationStateProvider GetAuthenticationStateAsync
 @inject NavigationManager NavigationManager
 @inject IGameAdminService GameAdminService
@@ -26,7 +26,7 @@
                     }
                 </div>
                 <div class="col">
-                    <a href="/admin/UrlNamePlaceholder-list">Cancel</a>
+                    <a href="/admin/game-list">Cancel</a>
                     <button type="submit" class="btn btn-primary">Submit</button>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                 return;
             }
 
-            NavigationManager.NavigateTo($"/admin/UrlNamePlaceholder-edit/{dbGame.Id}");
+            NavigationManager.NavigateTo($"/admin/game-edit/{dbGame.Id}");
         }
         else
         {
@@ -119,7 +119,7 @@
         }
 
         await GameAdminService.DeleteAsync(userName, Id);
-        NavigationManager.NavigateTo($"/admin/UrlNamePlaceholder-list");
+        NavigationManager.NavigateTo($"/admin/game-list");
     }
 
     @* OnChangeCodePlaceholder *@
