gawk -i inplace "{ gsub(/@\* ListItemCodePlaceholder \*@/, \"<td>@game.Name</td>\n\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ @\* ListItemCodePlaceholder \*@\") }; { print }" BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor

--- a/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8/Components/Pages/Admin/GameAdminList.razor
@@ -33,6 +33,7 @@
                     {
                         <tr>
                             <td>@game.Id</td>
+                            <td>@game.Name</td>
                             @* ListItemCodePlaceholder *@
                             <td>
                                 <NavButton Href="@("/admin/game-edit/" + game.Id)" Name="Edit" />
