gawk -i inplace "{ gsub(/ApplicationNamePlaceholder/, \"BlazorCrudDotNet8\") }; { print }" BlazorCrudDotNet8.Client/*

--- a/BlazorCrudDotNet8.Client/_Imports.razor
+++ b/BlazorCrudDotNet8.Client/_Imports.razor
@@ -7,9 +7,9 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using ApplicationNamePlaceholder.BusinessLogic.Entities
-@using ApplicationNamePlaceholder.BusinessLogic.Entities.DataTransferObjects
-@using ApplicationNamePlaceholder.BusinessLogic.Entities.Models
-@using ApplicationNamePlaceholder.BusinessLogic.Services
-@using ApplicationNamePlaceholder.Client
-@using ApplicationNamePlaceholder.SharedComponents
+@using BlazorCrudDotNet8.BusinessLogic.Entities
+@using BlazorCrudDotNet8.BusinessLogic.Entities.DataTransferObjects
+@using BlazorCrudDotNet8.BusinessLogic.Entities.Models
+@using BlazorCrudDotNet8.BusinessLogic.Services
+@using BlazorCrudDotNet8.Client
+@using BlazorCrudDotNet8.SharedComponents
