--- a/BlazorCrudDotNet8/Components/Layout/MainLayout.razor
+++ b/BlazorCrudDotNet8/Components/Layout/MainLayout.razor
@@ -1,23 +1,25 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
+<Header />
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
-
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
+<div class="container-fluid">
+  <div class="row flex-nowrap">
+    <AuthorizeView>
+        <Authorized>
+          <SideBar />
+          <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+              @Body
+            </div>
+          </main>
+        </Authorized>
+        <NotAuthorized>
+          <main class="col-md-12 ms-sm-auto px-md-4">
+            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+              @Body
+            </div>
+          </main>
+        </NotAuthorized>
+    </AuthorizeView>
+  </div>
 </div>
