cp -r ../intrepion-bash/languages/csharp/dotnet/files/app/ApplicationNamePlaceholder/* BlazorCrudDotNet8/

--- a/BlazorCrudDotNet8/Components/Account/Pages/_Imports.razor
+++ b/BlazorCrudDotNet8/Components/Account/Pages/_Imports.razor
@@ -1,2 +1,2 @@
-﻿@using BlazorCrudDotNet8.Components.Account.Shared
+﻿@using ApplicationNamePlaceholder.Components.Account.Shared
 @layout AccountLayout
