--- a/BlazorCrudDotNet8/Components/Account/Pages/ExternalLogin.razor
+++ b/BlazorCrudDotNet8/Components/Account/Pages/ExternalLogin.razor
@@ -6,7 +6,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using BlazorCrudDotNet8.Data
+@using ApplicationNamePlaceholder.BusinessLogic.Entities
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
