--- a/BlazorCrudDotNet8/Components/Account/Pages/RegisterConfirmation.razor
+++ b/BlazorCrudDotNet8/Components/Account/Pages/RegisterConfirmation.razor
@@ -3,7 +3,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using BlazorCrudDotNet8.Data
+@using ApplicationNamePlaceholder.BusinessLogic.Entities
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IEmailSender<ApplicationUser> EmailSender
