--- a/BlazorCrudDotNet8/Components/Account/Shared/AccountLayout.razor
+++ b/BlazorCrudDotNet8/Components/Account/Shared/AccountLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-@layout BlazorCrudDotNet8.Components.Layout.MainLayout
+@layout ApplicationNamePlaceholder.Client.Layout.MainLayout
 @inject NavigationManager NavigationManager
 
 @if (HttpContext is null)
