--- a/BlazorCrudDotNet8/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/BlazorCrudDotNet8/Components/Account/Shared/ExternalLoginPicker.razor
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using BlazorCrudDotNet8.Data
+@using ApplicationNamePlaceholder.BusinessLogic.Entities
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityRedirectManager RedirectManager
