--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminList.razor
@@ -28,13 +28,13 @@
                 }
                 else
                 {
-                    @foreach (var EntityLowercaseNamePlaceholder in TableLowercaseNamePlaceholder)
+                    @foreach (var game in TableLowercaseNamePlaceholder)
                     {
                         <tr>
-                            <td>@EntityLowercaseNamePlaceholder.Id</td>
+                            <td>@game.Id</td>
                             @* ListItemCodePlaceholder *@
                             <td>
-                                <NavButton Href="@("/admin/UrlNamePlaceholder-edit/" + EntityLowercaseNamePlaceholder.Id)" Name="Edit" />
+                                <NavButton Href="@("/admin/UrlNamePlaceholder-edit/" + game.Id)" Name="Edit" />
                             </td>
                         </tr>
                     }
