--- a/BlazorCrudDotNet8.Client/Layout/SideBar.razor
+++ b/BlazorCrudDotNet8.Client/Layout/SideBar.razor
@@ -21,6 +21,12 @@
         </NavLink>
       </li>
 
+      <li class="nav-item">
+        <NavLink class="nav-link" href="admin/game-list">
+          Games
+        </NavLink>
+ </li>
+
       @* NavMenuLinkCodePlaceholder *@
 
     </ul>
