--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminList.razor
@@ -33,6 +33,7 @@
                     {
                         <tr>
                             <td>@game.Id</td>
+                            <td>@game.Name</td>
                             @* ListItemCodePlaceholder *@
                             <td>
                                 <NavButton Href="@("/admin/game-edit/" + game.Id)" Name="Edit" />
