gawk -i inplace "{ gsub(/@\* EditRowCodePlaceholder \*@/, \"<div class=\\\"row\\\">\n\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ <div class=\\\"col\\\">\n\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ <label>\n\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ Name:\n\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ <InputText @bind-Value=\\\"game.Name\\\" />\n\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ </label>\n\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ </div>\n\ \ \ \ \ \ \ \ \ \ \ \ </div>\n\ \ \ \ \ \ \ \ \ \ \ \ @\* EditRowCodePlaceholder \*@\") }; { print }" BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor

--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminEdit.razor
@@ -17,6 +17,14 @@
     }
     <article>
         <EditForm class="container" Model="game" OnSubmit="HandleSubmit">
+            <div class="row">
+                <div class="col">
+                    <label>
+                        Name:
+                        <InputText @bind-Value="game.Name" />
+                    </label>
+                </div>
+            </div>
             @* EditRowCodePlaceholder *@
             <div class="row">
                 <div class="col">
