--- a/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminList.razor
+++ b/BlazorCrudDotNet8.Client/Pages/Admin/GameAdminList.razor
@@ -25,6 +25,7 @@
                 else if (games.Count == 0)
                 {
                     <tr>
+                        <td colspan="3">No games found.</td>
                         @* ZeroCountCodePlaceholder *@
                     </tr>
                 }
