gawk -i inplace "{ gsub(/ApplicationNamePlaceholder/, \"BlazorCrudDotNet8\") }; { print }" BlazorCrudDotNet8/Components/Account/Pages/*

--- a/BlazorCrudDotNet8/Components/Account/Pages/_Imports.razor
+++ b/BlazorCrudDotNet8/Components/Account/Pages/_Imports.razor
@@ -1,2 +1,2 @@
-﻿@using ApplicationNamePlaceholder.Components.Account.Shared
+﻿@using BlazorCrudDotNet8.Components.Account.Shared
 @layout AccountLayout
