gawk -i inplace "{ gsub(/ApplicationNamePlaceholder/, \"BlazorCrudDotNet8\") }; { print }" BlazorCrudDotNet8/Components/Account/Shared/*

--- a/BlazorCrudDotNet8/Components/Account/Shared/AccountLayout.razor
+++ b/BlazorCrudDotNet8/Components/Account/Shared/AccountLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-@layout ApplicationNamePlaceholder.Client.Layout.MainLayout
+@layout BlazorCrudDotNet8.Client.Layout.MainLayout
 @inject NavigationManager NavigationManager
 
 @if (HttpContext is null)
